--- a/soporte/css/general.css
+++ b/soporte/css/general.css
@@ -65,3 +65,39 @@ body {
 	height: 40 px;
 	line-height: 60px;
 }
+
+.cookies {
+    display: none;
+    position: fixed;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    padding-bottom: 20px;
+    width: 100%;
+    text-align: center;
+    min-height: 120px;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #FFFFFF;
+    z-index: 99999;
+}
+
+.inner {
+    width: 100%;
+    position: absolute;
+    padding-left: 5px;
+    font-family: verdana;
+    font-size: 12px;
+    top: 30%;
+}
+ 
+.inner .aceptar {
+    padding: 4px;
+    color: #00ff2E;
+    text-decoration: none;
+}
+ 
+.inner a.info {
+    padding-left: 5px;
+    text-decoration: none;
+    color: #FAFF00;
+}
